# vanilla-firemage

./: .gitignore  README.md  TODO  errors.txt  example_engine_input.json  index.html  install.txt  package-lock.json  package.json  vite.config.js
.github/workflows/: deploy.yml
assets/css/: _animations.css  _apl.css  _comparison.css  _form.css  _main.css  _mixins.css  _paperdoll.css  _spotlight.css  _talent_calculator.css  _tooltip.css  _variables.css  app.css
assets/js/: App.vue  apl.js  app.js  common.js  components.js  icons.js  ignite.js  items.js  oldApp.vue  presets.js  sim_container.js  sim_worker.js  talents.js  template.js
assets/js/Components/: AnimateNumber.vue  Apl.vue  AplAction.vue  AplCondition.vue  AplDefaultAction.vue  AplValue.vue  Checkbox.vue  CombatChart.vue  Comparison.vue  Help.vue  Histogram.vue  Micon.vue  ProgressCircle.vue  SelectSimple.vue  SortLink.vue  SpellPower.vue  Spotlight.vue  TalentCalculator.vue  Tooltip.vue  Tutorial.vue  Wowicon.vue
crate/: Cargo.toml
crate/src/: apl.rs  constants.rs  decisions.rs  legacy_config.rs  lib.rs  main.rs  orchestration.rs  state.rs
temp/: app.css  app.vue
