[package]
name = "crate"
version = "0.1.0"
edition = "2024"

[features]
default = ["console_error_panic_hook"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.84"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
gloo-utils = { version = "0.1", features = ["serde"] }
rand = "0.8"
rand_chacha = "0.3"
rand_distr = "0.4"
getrandom = { version = "0.2", features = ["js"] }
serde_json = "1.0"
console_log = "0.2"
log = "0.4"
strum = "0.26"
strum_macros = "0.26"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
]

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
